# sentrifarm

./: .gitmodules  ComponentsAndAssembly.md  FAQ.md  OperationalConcept.md  README.md  TODO.md
attic/: frankenstein.md
attic/experiments/arduino/digispark-spi1/: digispark-spi1.ino
attic/experiments/arduino/time_solar_and_temp_monitor/: time_solar_and_temp_monitor.ino
attic/experiments/esp8266/: LICENSE.md  Makefile  README.md
attic/experiments/esp8266/include/: user_hostname.h
attic/experiments/esp8266/src/: helpers.c  log.c
attic/experiments/mqtt-sn/: two-serial-gateway.sh
attic/experiments/solar430/: first-logging-run.ods  third-logging-run.ods
attic/ground-sensor/: README.md
attic/ground-sensor/code/: config-esp8266  frankenstein.patch
attic/ground-sensor/code/src/: Makefile  cal_dex.c  cmd_at.c  cmd_common.c  cmd_env.c  ds18b20.c  ds18b20.h  entry.c  helpers.c  sentrifarm.c  tcp_push.c  tcp_push.h
attic/ground-sensor/schematics/: esp01-ground-sensor-prototype0-threshold.fzz  esp01-simple_temp.fzz
attic/stuff/: rc.local.in
attic/tp1043nd/: README.md  kernel.patch
base-station/buspirate/: test_binary_spi.c
base-station/carambola2/: Makefile  Makefile.carambola2  check_build_dir.sh  kernel.patch  openwrt.config  openwrt.config.carambola2  openwrt.config.raspi  rsmb-config-carambola2-test  run_on_carambola2_test.sh  spidev_fdx_readloraver.c  toolchain.cmake
base-station/carambola2/patches/: 0000-1wire-fix-gpio.patch  0001-SPI0.1-and-0.2-with-GPIO-CS.patch  0001-enable_bmp085.patch  0002-enable-RTC-class.patch
base-station/mcu/: .gitignore  platformio.txt
base-station/mcu/SX1276lib/: sx1276.cpp  sx1276.h  sx1276reg.h
base-station/mcu/arduino-mqtt-sn/: LICENSE  mqttsn-messages.cpp  mqttsn-messages.h  mqttsn-serial-bridge.cpp  mqttsn.h
base-station/mcu/blinky/: platformio.ini
base-station/mcu/blinky/src/: blinky.ino
base-station/mcu/sx1276-beacon/: platformio.ini  sx1276-beacon.pro  trim-libs.py
base-station/mcu/sx1276-beacon/src/: beacon.ino
base-station/mcu/sx1276-mqttsn-node/: platformio.ini  sx1276-mqttsn-node.pro
base-station/mcu/sx1276-mqttsn-node/lib/: Adafruit_Sensor
base-station/mcu/sx1276-mqttsn-node/src/: node.ino  sx1276mqttsn.cpp  (+1 more)
base-station/mcu/sx1276-rx/: sx1276-rx.pro
base-station/schematics/: ioshield.brd  ioshield.sch
base-station/sx1276/: .gitignore  CMakeLists.txt  Makefile  bp_sx1276_dump.c  bp_sx1276_test1.cpp  buspirate_binary.c  buspirate_binary.h  buspirate_spi.cpp  buspirate_spi.hpp  fifo_mqttsn_bridge.cpp  misc.cpp  misc.h  misc.hpp  mqttclient.cpp  mqttclient.hpp  rsmb-config-pc-test  run_on_pc_test.sh  spi.hpp  spi_factory.cpp  spi_factory.hpp  spidev_spi.cpp  spidev_spi.hpp  sx1276.cpp  sx1276.hpp  sx1276_dump_regs.cpp  sx1276_mqttsn_bridge.cpp  sx1276_platform.cpp  sx1276_platform.hpp  sx1276_test1_rx.cpp  sx1276_test1_tx.cpp  test_mqtt_discard.cpp  test_mqtt_discard2.cpp  util.hpp
base-station/tp1043nd/: datalogger.script  openwrt.config
dht_esp8266/: dht_esp8266.ino
docs/: index.md
experiments/arduino/dht11/: dht11.ino
experiments/arduino/helloworld/: helloworld.ino
experiments/arduino/solar-monitor1/: solar-monitor1.ino
experiments/esp8266/: .config
experiments/esp8266/include/: main.h
experiments/esp8266/src/: Makefile  hostname.c
experiments/mqtt-sn/: rsmb-config-1  rsmb-config-2  two-serial-gateway.sh
experiments/solar430/: charge_monitor.fzz  second-logging-run.ods
experiments/sx1276/: bus_pirate.basic
ground-sensor/code/: .gitignore  Makefile  config-esp8266  frankenstein.patch
ground-sensor/code/src/: Makefile  cmd_ds18b20.c  cmd_iw.c  console.c  entry.c  env.c  flash_end_marker.c  hostname.c  iwconnect.c  microrl.c  pin_map.c  sentrifarm.c  tcp_push.c  tcp_push.h  test_reassoc_after_sleep.c  uart.c
ground-sensor/esp8266/: .config  Makefile  my_defconfig
ground-sensor/esp8266-bare/src/: main.c
ground-sensor/esp8266-sensor/: .gitignore  Makefile  kcnf
ground-sensor/esp8266-sensor/include/: main.h
ground-sensor/esp8266-sensor/src/: Makefile
ground-sensor/esp8266/include/: gpio_map.h
ground-sensor/esp8266/src/: hostname.c  main.c
hardware/carambola2-inair9-io-shield/: ioshield.brd  ioshield.sch
hardware/inair9-ioshield-adaptor/: ioshield.brd  ioshield.sch
media/: architecturediagramv0.2.odg
misc/platformio-qmake/: qmake.conf
software/: .gitignore  EnhancedNodeCarambola2.md  FarmStationPi.md  README-mqttsn-linux-to-teensy-or-esp8266.md
software/Docker/mqtt2graphite/: Dockerfile  dockerbuild  dockerstart  supervisord.conf
software/data/: mqtt2graphite-sf.map
software/ext/: .gitignore
software/mcu/: Makefile
software/mcu/SX1276lib/: sx1276.cpp
software/mcu/adc-test/: adc-test.pro  platformio.ini
software/mcu/arduino-mqtt-sn/: mqttsn-messages.cpp  mqttsn.h
software/mcu/dht11-test/: dht11-test.pro
software/mcu/leaf/: leaf.pro  platformio.ini
software/mcu/sx1276-beacon/: sx1276-beacon.pro
software/mcu/sx1276-esp07/: extra.py  platformio.ini
software/mcu/sx1276-mqttsn-node/: sx1276-mqttsn-node.pro
software/mcu/sx1276-regdump/: platformio.ini  sx1276-regdump.pro
software/mcu/sx1276-rx/: platformio.ini  sx1276-rx.pro
software/openwrt/: Makefile  Makefile.raspi  feeds.conf  feeds.conf.in  kernel.patch  openwrt.config.carambola2  openwrt.config.raspi  rsmb-config-carambola2-test  sx1276_dump_reg.c  toolchain.carambola2.cmake
software/openwrt/files/: 99gpio-i2c-rtc.pi  run_once  run_once.c2  run_once.pi
software/openwrt/patches/: 0001-enable_bmp085.patch  0005-enable-pi-squashfs.patch
software/scripts/: Makefile
software/scripts/platformio-boards/: carambola2.json
software/scripts/platformio-platforms/: openwrtcarambola2-builder.py  openwrtcarambola2.py
software/sx1276/: CMakeLists.txt  buspirate_binary.c  buspirate_spi.cpp  buspirate_spi.hpp  fifo_mqttsn_bridge.cpp  misc.cpp  mqttclient.cpp  rsmb-config-pc-test  spi.hpp  spidev_spi.cpp  sx1276.cpp  sx1276.hpp  sx1276_mqttsn_bridge.cpp  sx1276_platform.cpp  sx1276_test1_rx.cpp  sx1276_test1_tx.cpp  test_mqtt_discard.cpp
software/util/: b76800.c  esp8266pgm.c
(+67 files in other folders)
